--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ header,
 footer {
     display: flex;
     justify-content: center;
-    border-bottom: 1px solid red;
 }
 
 .header-center,
@@ -158,13 +157,38 @@ li {
     /* ACTION */
 
 .action {
-    padding-top: 50px;
-    padding-bottom: 50px;
+    color: #F9FAF8;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 
+.action-box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 50px 100px;
+}
+
+.action-call {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.action-button {
+    border: 2px #F9FAF8 solid;
+    border-radius: 8px;
+    color: #F9FAF8;
+    width: 100px;
+    height: 30px;
+}
 
     /* FOOTER */
 
 footer {
     text-align: center;
+    height: 100px;
+}
+
+.footer-center {
+    margin: auto 0;
 }
